backup_individuals/sjeng/use_undefined_identifier/c1/setup_attackers
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/setup_attackers/src/see.c:509:6: error: use of undeclared identifier 'setup_attackers_rook_o'
v4 = setup_attackers_rook_o[v3]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/setup_attackers/src/see.c:555:7: error: use of undeclared identifier 'setup_attackers_bishop_o'
v10 = setup_attackers_bishop_o[v9]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/setup_attackers/src/see.c:617:46: error: use of undeclared identifier 'jpt_401814'
v16 = square + ( __int64)*( int *)( ( char *)jpt_401814 + v15); 
                                             ^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/setup_attackers/src/obj/see.o] Error 1
